# AoC

./: README  README.md  bun.lockb  package-lock.json  package.json  server.js  tailwind.config.js  vite.config.ts
.github/workflows/: builds.yml
2024/: 1.py  10.py  10b.py  11.py  12.py  1b.py  2.py  2b.py  3.py  3b.py  3b_.py  4.py  4b.py  5.py  5b.py  6.py  6b.py  7.py  7b.py  8.py  8b.py  9.py  9b.py
api/: index.js
notifier/: AoC.spec  README.md  aoc.icns  app.py  pyproject.toml
notifier/aoc_notifier/: __main__.py  app.py
server/: bun.lockb  package-lock.json  package.json
server/api/: index.js
src/: App.tsx  index.css
src/components/: Description.tsx  Editor.tsx  YearDay.tsx  output.tsx  performance.tsx  time.tsx
src/services/: adventOfCode.ts  codeExecution.ts  constants.ts  parser.ts  performanceAnalysis.ts  types.ts
src/theme/: colors.ts  monacoTheme.ts
src/utils/: console.ts  fetch.ts  time.ts
